Add university projects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Federico Lopez @ fi.uba.ar</title>
     <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
     <link type="text/css" rel="stylesheet" href="css/bootstrap-social.css">
     <link type="text/css" rel="stylesheet" href="css/customstyles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -30,15 +30,9 @@
             </div>
         </div>
 
-
-        <h2>Contact</h2>
-        <a href="mailto:fedelopez77@gmail.com" target="_blank" class="btn btn-social-icon btn-vk"><span class="fa glyphicon glyphicon-envelope"></span></a>
-        <a href="http://www.github.com/fedelopez77" target="_blank" class="btn btn-social-icon btn-github"><span class="fa fa-github"></span></a>
-        <a href="http://www.linkedin.com/in/federico-l%C3%B3pez-58572078/" target="_blank" class="btn btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a>
-        <a href="http://www.facebook.com/fedelopezjunin" target="_blank" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a>
-        <a href="http://instagram.com/fedelopezw" target="_blank" class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span></a>
+        <div id="contactdiv"></div>
+        <br>
     </div>
-
 
     <div id="footerdiv"></div>
 
@@ -48,6 +42,7 @@
     <script> 
         $(function(){
             $("#navbardiv").load("navbar.html");
+            $("#contactdiv").load("contact.html");
             $("#footerdiv").load("footer.html"); 
         });
     </script> 
