--- a/index.html
+++ b/index.html
@@ -21,14 +21,23 @@
         <h1><strong>Federico López</strong></h1>
         <br>
 
-        <div class="panel panel-default" style="background:white;max-width: 800px;">
-            <div class="panel-body" style="padding: 10px 15px">
+        <div class="panel panel-default" style="background:white;">
+            <div class="panel-body" style="padding: 10px 25px">
                 <h2 style="margin-top: 10px">About me</h2>
                 <p style="text-align: justify;text-justify: inter-word;">
-                Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
+                    &emsp;I'm Federico López, a Software Engineer from Argentina. But more than anything, I am a nerd. I love to study. My passion and biggest hobby is reading about almost everything, and my curiosity led me to graduate in Software Engineering. I was captivated by the logical and mathematical algorithmic problems. They are an amusing and intriguing riddle for me. Nonetheless I never stopped reading whatever got to my hands. While working on my thesis, I discovered <b>Natural Language Processing</b>, which I found totally fascinating due to its relation with texts of any kind and nature. 
+                    Nowadays I am working at a marketing company with <b>Big data and Machine learning</b> tools, which are also very interesting. At the same time I am starting some research projects in related areas at Faculty of Engineering of the University of Buenos Aires (<a href="http://www.fi.uba.ar/" target="_blank">FIUBA</a>).
+                </p>
+                <p style="text-align: justify;text-justify: inter-word;">
+                    &emsp;I am also passionate about traveling, and I write a blog in Spanish about different trips that I did. You can check it out <a href="https://elviajerova.wordpress.com/" target="_blank">here</a>.
+                </p>
+
+                <p style="text-align: justify;text-justify: inter-word;">
+                    &emsp;Feel free to contact me through any social network or to my email.
                 </p>
             </div>
         </div>
+        <br>
 
         <div id="contactdiv"></div>
         <br>
