--- a/navbar.html
+++ b/navbar.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <ul class="nav navbar-nav">
             <li><a href="./">Home</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="./projects.html">Projects</a></li>
             <li><a href="./university.html">FIUBA</a></li>
         </ul>
     </div>
