--- a/university.html
+++ b/university.html
@@ -35,30 +35,30 @@
                     <p style="text-align: justify;text-justify: inter-word;">
                         "Módulo de resúmenes automáticos basado en TextRank con integración a Gensim"<br>
                         <ul>
-                            <li><a href="./fiuba/propuesta_tp_prof.pdf" target="_blank">Proposal</a></li>
-                            <li><a href="./fiuba/informe_tp_prof.pdf" target="_blank">Final report</a></li>
+                            <li><a href="./pdf/propuesta_tp_prof.pdf" target="_blank">Proposal</a></li>
+                            <li><a href="./pdf/informe_tp_prof.pdf" target="_blank">Final report</a></li>
                         </ul>
                     </p><br>
 
 
                     <h3 style="margin-top: 10px"><li>75.45 - Taller de desarrollo de proyectos I</li></h3>
                     <p style="text-align: justify;text-justify: inter-word;">
-                        <a href="./fiuba/desa_proy_tp.pdf" target="_blank">Final report</a>
+                        <a href="./pdf/desa_proy_tp.pdf" target="_blank">Final report</a>
                     </p><br>
 
                     <h3 style="margin-top: 10px"><li>75.47 - Taller de desarrollo de proyectos II</li></h3>
                     <p style="text-align: justify;text-justify: inter-word;">
-                        <a href="./fiuba/plan_proy_taller_proy_ii.pdf" target="_blank">Project Plan</a>
-                    </p><br>
-
-                    <h3 style="margin-top: 10px"><li>75.58 - Evaluación de proyectos y manejo de riesgos</li></h3>
-                    <p style="text-align: justify;text-justify: inter-word;">
-                        <a href="./fiuba/riesgo_tp_final.pdf" target="_blank">Business case</a>
+                        <a href="./pdf/plan_proy_taller_proy_ii.pdf" target="_blank">Project Plan</a>
                     </p><br>
 
                     <h3 style="margin-top: 10px"><li>75.50 - Introducción​ a Sistemas Inteligentes</li></h3>
                     <p style="text-align: justify;text-justify: inter-word;">
-                        <a href="./fiuba/intro_sist_intelig_tp_final.pdf" target="_blank">Final report</a>
+                        <a href="./pdf/intro_sist_intelig_tp_final.pdf" target="_blank">Final report</a>
+                    </p><br>
+
+                    <h3 style="margin-top: 10px"><li>75.58 - Evaluación de proyectos y manejo de riesgos</li></h3>
+                    <p style="text-align: justify;text-justify: inter-word;">
+                        <a href="./pdf/riesgo_tp_final.pdf" target="_blank">Business case</a>
                     </p><br>
 
                 </ul>
