Adding meta tag description

--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="About Federico Lopez NLP and Machine Learning researcher">
     <title>Federico Lopez @ fi.uba.ar</title>
     <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
@@ -20,7 +21,7 @@
     <div class="container">
         <h1><strong>Projects</strong></h1>
         <br>
-        
+
         <div class="panel panel-default" style="background:white;">
             <div class="panel-body" style="padding: 10px 15px">
                 <ul>
