--- a/navbar.html
+++ b/navbar.html
@@ -1,9 +1,19 @@
 <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <ul class="nav navbar-nav">
-            <li><a href="./">Home</a></li>
-            <li><a href="./projects.html">Projects</a></li>
-            <li><a href="./university.html">FIUBA</a></li>
-        </ul>
-    </div>
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+		</div>
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav">
+				<li><a href="./">Home</a></li>
+				<li><a href="./projects.html">Projects</a></li>
+				<li><a href="./university.html">FIUBA</a></li>
+			</ul>
+		</div>
+	</div>
 </nav>
